fit: registration router added (with send mail transport)

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 ATLAS_URI=mongodb+srv://Zhanna:tuphta794@cluster0-juvoz.mongodb.net/<dbname>?retryWrites=true&w=majority
+
+SENDGRID_PASSWORD=fbs6pudays
+SENDGRID_USERNAME=zh.kaymedenova@gmail.com
+SENDGRID_API_KEY=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
